2010-05-01  Eli Zaretskii  <eliz@gnu.org>

	* composite.el (compose-region, reference-point-alist): Fix typos
	in the doc strings.

2010-04-28  Alexander Klimov <alserkli@inbox.ru> (tiny change)

	* calc/calc-graph.el (calc-graph-plot): Use the proper form for
	gnuplot's "set" command.

2010-04-26  Juanma Barranquero  <lekktu@gmail.com>

	* abbrev.el (last-abbrev-text): Doc fix.
	(abbrev-prefix-mark): Don't escape parenthesis.

2010-04-24  Andreas Schwab  <schwab@linux-m68k.org>

	* composite.el (find-composition): Doc fix.

2010-04-24  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/sql.el (sql-electric-stuff): Fix typo in tag.
	(sql-oracle-program, sql-sqlite-options)
	(sql-query-placeholders-and-send): Doc fixes.
	(sql-set-product, sql-interactive-mode): Reflow docstrings.
	(sql-imenu-generic-expression, sql-buffer)
	(sql-mode-ansi-font-lock-keywords, sql-mode-oracle-font-lock-keywords)
	(sql-mode-postgres-font-lock-keywords, sql-mode-ms-font-lock-keywords)
	(sql-mode-sybase-font-lock-keywords)
	(sql-mode-informix-font-lock-keywords)
	(sql-mode-interbase-font-lock-keywords)
	(sql-mode-ingres-font-lock-keywords, sql-mode-solid-font-lock-keywords)
	(sql-mode-mysql-font-lock-keywords, sql-mode-sqlite-font-lock-keywords)
	(sql-mode-db2-font-lock-keywords, sql-mode-font-lock-keywords)
	(sql-product-feature, sql-highlight-product)
	(comint-line-beginning-position, sql-rename-buffer)
	(sql-toggle-pop-to-buffer-after-send-region)
	(sql-oracle, sql-sybase, sql-informix, sql-sqlite, sql-mysql, sql-solid)
	(sql-ingres, sql-ms, sql-postgres, sql-interbase, sql-db2, sql-linter):
	Fix typos in docstrings.

2010-04-23  Juri Linkov  <juri@jurta.org>

	* info.el (Info-fontify-node): Put Info-breadcrumbs to the `display'
	property instead of `invisible' and `after-string' (bug#5998).

2010-04-23  Juri Linkov  <juri@jurta.org>

	* image-mode.el (image-mode-as-text): Fix typo in docstring.

2010-04-23  Juanma Barranquero  <lekktu@gmail.com>
